--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,27 +1,53 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <div class="container-fluid">
-    <%= link_to 'DeviseDemo', root_path, class: 'navbar-brand' %>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-            <%= link_to 'Home', root_path, class: 'nav-link active' %>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Settings
-          </a>
-          <ul class="dropdown-menu">
-            <% if user_signed_in? %>
-              <li><%= link_to 'Sign Out', destroy_user_session_path, class: "dropdown-item", data: {turbo_method: :delete} %></li>
-            <% else %>
-              <li><%= link_to 'Sign In', new_user_session_path, class: "dropdown-item" %></li>
-            <% end %>
+ <header class="head">
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="landing.html"><strong>𝓑𝓮𝓼𝓽𝓡𝓲𝓼𝓱𝓽𝓮𝔂</strong> 
+          <!-- <img src="/images/BestRishtey.png" alt="Logo" width="100" height="100"> -->
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="landing.html">Home</a>
+            </li>
+           <% if user_signed_in? %>
+             <li>
+               <%= link_to current_user.username, user_path(current_user), class: "nav-link active" %>
+             </li>
+             <li>
+               <%= link_to 'Sign Out', destroy_user_session_path, class: "nav-link active", data: {turbo_method: :delete} %>
+             </li>
+           <% else %>
+             <li>
+               <%= link_to 'Sign In', new_user_session_path, class: "nav-link active" %> 
+             </li>
+           <% end %>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Help</a>
+            </li>
           </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-danger" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+ </header>
