--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,7 +16,7 @@
     <div class="row d-flex mt-40 ms-4 me-4">
       <div class="col-md-4 ">
         <div class="packages-box">
-          <img src="/assets/clarinet.svg" class="image">
+          <img src="/assets/clarinet.svg" class="sahnai">
           <h3 class="font">Matchmaking Services</h3>
           <div class="header-border"></div>
           <p>It is our basic package with affordability as its main essence. This Package meets both objectives -
@@ -27,7 +27,7 @@
 
       <div class="col-md-4 ">
         <div class="packages-box">
-          <img src="/assets/clarinet.svg" class="image">
+          <img src="/assets/clarinet.svg" class="sahnai">
           <h3 class="font">Messaging and Communication</h3>
           <div class="header-border"></div>
           <p>It is our basic package with affordability as its main essence. This Package meets both objectives -
@@ -38,7 +38,7 @@
 
       <div class="col-md-4 ">
         <div class="packages-box">
-          <img src="/assets/clarinet.svg" class="image">
+          <img src="/assets/clarinet.svg" class="sahnai">
           <h3 class="font">Event Services</h3>
           <div class="header-border"></div>
           <p>It is our basic package with affordability as its main essence. This Package meets both objectives -
@@ -98,7 +98,7 @@
           <li>&nbsp; &nbsp; &nbsp; &amp; many more.</li>
         </ul>
       </div>
-      <div class="col-sm-5 image">
+      <div class="col-sm-5 ">
         <img src="/assets/verticle.jpg" class="img-fluid">
       </div>
     </div>
@@ -278,28 +278,28 @@
                   <div class="carousel-item active">
                       <div class="row">
                           <div class="col-md-4 equal-height">
-                              <div class="card ">
+                              <div class="card caard ">
                                   <img src="/assets/South-Indian-wedding-photography-14.jpg" alt="Card 1">
                                   <div class="card-body">
-                                      <h5 class="card-title">Ajeet &amp; Jaya</h5>
+                                      <h5 class="card-title ct">Ajeet &amp; Jaya</h5>
                                       <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus obcaecati aperiam libero officia harum vero alias odio nihil, itaque laudantium dicta laboriosam soluta quod nisi quaerat doloremque explicabo repellat id.</p>
                                   </div>
                               </div>
                           </div>
                           <div class="col-md-4 equal-height">
-                              <div class="card">
+                              <div class="card caard">
                                   <img src="/assets/aa6b414fc1cebf82b8cd7f4a8972a30a.jpg" alt="Card 2">
                                   <div class="card-body">
-                                      <h5 class="card-title">Raunak &amp; Ankita</h5>
+                                      <h5 class="card-title ct">Raunak &amp; Ankita</h5>
                                       <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae similique distinctio. Tempora repudiandae nostrum ab! Numquam provident explicabo non est cumque, laboriosam aut facere atque expedita saepe, amet quaerat.</p>
                                   </div>
                               </div>
                           </div>
                           <div class="col-md-4 equal-height">
-                              <div class="card">
+                              <div class="card caard">
                                   <img src="/assets/7a335573f9cb26b03c0cbebdd7c45e9c.png" alt="Card 3">
                                   <div class="card-body">
-                                      <h5 class="card-title">Yuvraj &amp; Suhashini</h5>
+                                      <h5 class="card-title ct">Yuvraj &amp; Suhashini</h5>
                                       <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque dolore sunt, eum vitae molestias odit hic? Facilis blanditiis, ipsam iste placeat maiores sunt natus nesciunt, deserunt dolor dolores tempora quam!</p>
                                   </div>
                               </div>
@@ -309,28 +309,28 @@
                   <div class="carousel-item">
                       <div class="row">
                           <div class="col-md-4">
-                              <div class="card">
+                              <div class="card caard">
                                   <img src="/assets/a8f471519b0cfce12b47159086cd3457.jpg" alt="Card 4">
                                   <div class="card-body">
-                                      <h5 class="card-title">Shashvat &amp; Pallavi</h5>
+                                      <h5 class="card-title ct">Shashvat &amp; Pallavi</h5>
                                       <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe illum cum eos eveniet nam. Recusandae aliquid, rem in ducimus optio dignissimos delectus aperiam, id error, laborum porro exercitationem fuga sapiente!</p>
                                   </div>
                               </div>
                           </div>
                           <div class="col-md-4">
-                              <div class="card">
+                              <div class="card caard">
                                   <img src="/assets/1535303839A36I8979-Edit.jpg" alt="Card 5">
                                   <div class="card-body">
-                                      <h5 class="card-title">Abhishek &amp; Shreya</h5>
+                                      <h5 class="card-title ct">Abhishek &amp; Shreya</h5>
                                       <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ipsam non nemo unde nobis architecto hic, earum est delectus facilis fuga animi exercitationem sapiente beatae veritatis eius repellendus. Blanditiis, nihil!</p>
                                   </div>
                               </div>
                           </div>
                           <div class="col-md-4">
-                              <div class="card">
+                              <div class="card caard">
                                   <img src="/assets/0e5e9769908d8f00c9a79f2de9c92049.jpg" alt="Card 6">
                                   <div class="card-body">
-                                      <h5 class="card-title">Sahil &amp; Muskan </h5>
+                                      <h5 class="card-title ct">Sahil &amp; Muskan </h5>
                                       <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis ex quam iusto soluta quas quae? Illo numquam aperiam saepe iusto! Illum corrupti sit quia veniam ut quaerat! Vitae, facilis assumenda?</p>
                                   </div>
                               </div>
@@ -340,28 +340,28 @@
                   <div class="carousel-item">
                     <div class="row">
                         <div class="col-md-4">
-                            <div class="card">
+                            <div class="card caard">
                                 <img src="/assets/p2332282348-6.jpg" alt="Card 4">
                                 <div class="card-body">
-                                    <h5 class="card-title">Aadil & Maahi</h5>
+                                    <h5 class="card-title ct">Aadil & Maahi</h5>
                                     <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi libero illo in harum sapiente laborum, quos dolore accusamus consectetur repudiandae magnam nulla aut dolores ea quis aliquid sit labore impedit!</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <div class="card">
+                            <div class="card caard">
                                 <img src="/assets/positively-elegant-gatsby-inspired-wedding-at-the-stanley-park-pavilion-12-600x900-600x900.jpg" alt="Card 5">
                                 <div class="card-body">
-                                    <h5 class="card-title">John & Carolina</h5>
+                                    <h5 class="card-title ct">John & Carolina</h5>
                                     <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus quod rem molestiae consequuntur aut unde delectus voluptas aspernatur architecto, deleniti molestias autem quisquam laborum rerum aliquid at libero? Asperiores, molestias.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <div class="card">
+                            <div class="card caard">
                                 <img src="/assets/samantha-gades-7JUDLPlA114-unsplash.jpg" alt="Card 6">
                                 <div class="card-body">
-                                    <h5 class="card-title">Zeyn &amp; Lyra</h5>
+                                    <h5 class="card-title ct">Zeyn &amp; Lyra</h5>
                                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora temporibus nesciunt unde assumenda deleniti doloremque. Praesentium odio neque reprehenderit harum assumenda placeat, possimus quibusdam, veniam sequi, veritatis quasi obcaecati consequuntur?</p>
                                 </div>
                             </div>
@@ -392,95 +392,14 @@
   </section> -->
 
   <section class="end common-padding text-center relative">
-    <span><a href="landing.html">𝓑𝓮𝓼𝓽𝓡𝓲𝓼𝓱𝓽𝓮𝔂</a></span>
+    <span>
+       <!--<a href="landing.html">𝓑𝓮𝓼𝓽𝓡𝓲𝓼𝓱𝓽𝓮𝔂</a>-->
+       <%= link_to '𝓑𝓮𝓼𝓽𝓡𝓲𝓼𝓱𝓽𝓮𝔂', root_path, class: '' %>
+    </span>
     <p>A trusted platform for your perfect match.</p>
   </section>
 
-  <footer>
 
-    <div class="container-fluid">
-    <div class="row footer-items">
-      <div class="col-sm-4">
-      <ul>
-        <h3>Get to Know Us</h3>
-        <li><a href="#">About us</a></li>
-        <li><a href="#">Our People</a></li>
-        <li><a href="#">Careers</a></li>
-        <li><a href="#">Help</a></li>
-      </ul>
-      </div>
-      <div class="col-sm-4">
-      <ul>
-        <h3>Help</h3>
-        <li><a href="#">Sign Up</a></li>
-        <li><a href="#">Partner Search</a></li>
-        <li><a href="#">Customer Support</a></li>
-        <li><a href="#">Member Login</a></li>
-      </ul>
-      </div>
-      <div class="col-sm-4">
-        <ul>
-          <h3>Privacy</h3>
-          <li><a href="#">Disclaimer</a></li>
-          <li><a href="#">Terms of Use</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Be Safe Online</a></li>
-          <li><a href="#">Report Misuse</a></li>
-        </ul>
-        <!-- <h3>Contact Us</h3> -->
-          <!-- <div class="col">
-            <ul>
-              <li>
-                <ul class="col">
-                  <li><i class="fa-solid fa-location-dot"></i></li>
-                  <li>"3rd Floor, xyz tower, e-29, c-block, sector-29,<br> Noida, UP, India - 000 000 "</li>
-                </ul>
-              </li>
-              <li>
-                <ul class="col">
-                  <li><i class="fa-solid fa-phone"></i></li>
-                  <li>"India: 1800 000 000 / 1800 001 002"
-                    <br>
-                    "Outside India: +91-00-00000000 / +91-81-00000000 "</li>
-                </ul>
-              </li>
-              <li>
-                <ul class="col">
-                  <li><i class="fa-regular fa-envelope"></i></li>
-                  <li><a href="www.email.com">info@abc.in</a></li>
-                </ul>
-              </li>
-              <li>
-                <ul class="col">
-                  <li><i class="fa-solid fa-comment-sms"></i></li>
-                  <li>SMS 'xyz' to 0000000000</li>
-                </ul>
-              </li>
-            </ul>
-          </div> -->
-
-      </div>
-    </div>
-    </div>
-    <div class="fixed-wrapper footer-copyrights">
-
-      <div class="follow-us flex-box">
-        <p class="follow">Follow us on:</p>
-        <ul class="social-media">
-          <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook" style="color:#000000"></i></a></li>
-          <li><a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-square-twitter" style="color:#000000"></i></a> </li>
-          <li><a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin" style="color:#000000"></i></a></li>
-          <li><a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube" style="color:#000000"></i></a></li>
-          <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-square-instagram" style="color:#000000"></i></a></li>
-        </ul>
-      </div>
-      <div class="copyrights-text flex-box">
-        <div>© Copyright 2023 BestRishtey</div>
-      </div>
-      
-    </div>
-  </div>
-  </footer>
 
 
   
