--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,26 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <link rel="stylesheet" href="assets/style.css">
+
+    <!--<link rel="stylesheet" href="style.css">-->
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
     <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
+
         <!-- Linking of font awesome(for using different type of icons) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
+
        <!-- Add the Google Font link here -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-      <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+
+    <!--<link rel="stylesheet" href="css/font-awesome.min.css">-->
+
+      <%= stylesheet_link_tag "application", "data-turbo-track": "reload", media: 'all' %>
+      <%= stylesheet_link_tag "style", "data-turbo-track": "reload" %>
+      <%= stylesheet_link_tag "account", "data-turbo-track": "reload" %>
       <%= javascript_importmap_tags %>
   
-<head>
+</head>
   
   <body>
+    <nav>
     <%= render "shared/header" %>
-   
+    </nav>
+      
       <%= yield %>
+     
+    <footer>
+    <%= render "shared/footer" %>  
+    </footer>
   </body>
 </html>
