--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,9 +1,10 @@
  <header class="head">
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="landing.html"><strong>𝓑𝓮𝓼𝓽𝓡𝓲𝓼𝓱𝓽𝓮𝔂</strong> 
-          <!-- <img src="/images/BestRishtey.png" alt="Logo" width="100" height="100"> -->
-        </a>
+        <!--<a class="navbar-brand" href="landing.html"><strong>𝓑𝓮𝓼𝓽𝓡𝓲𝓼𝓱𝓽𝓮𝔂</strong> 
+          <img src="/images/BestRishtey.png" alt="Logo" width="100" height="100"> 
+        </a>-->
+        <strong><%= link_to '𝓑𝓮𝓼𝓽𝓡𝓲𝓼𝓱𝓽𝓮𝔂', root_path, class: 'navbar-brand' %></strong>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -11,8 +12,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="landing.html">Home</a>
+              <!--<a class="nav-link active" aria-current="page" href="landing.html">Home</a>-->
+              <%= link_to 'Home', root_path, class: 'nav-link active' %>
             </li>
+            <li class="nav-item">
            <% if user_signed_in? %>
              <li>
                <%= link_to current_user.username, user_path(current_user), class: "nav-link active" %>
@@ -25,6 +28,7 @@
                <%= link_to 'Sign In', new_user_session_path, class: "nav-link active" %> 
              </li>
            <% end %>
+           </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
