--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -22,7 +22,7 @@
         </div>
 
         <div class="form-group mb-2">
-          <%= f.submit "Change my password", class: "btn btn-primary btn-lg" %>
+          <%= f.submit "Change my password", class: "btn btn-danger btn-lg" %>
         </div>
       <% end %>
 
