apply turbo and stimulus in the description section of users profile to add or edit description

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,9 +36,9 @@
     <nav>
     <%= render "shared/header" %>
     </nav>
-      
+    
       <%= yield %>
-     
+      <%= turbo_frame_tag 'remote_modal' %>
     <footer>
     <%= render "shared/footer" %>  
     </footer>
