--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -96,6 +96,11 @@
     <%= form.label :mother_tongue %>
     <%= form.text_field :mother_tongue%>
   </div>
+
+  <div class="field">
+    <%= form.label :description %>
+    <%= form.text_field :description%>
+  </div>
     
   <!-- Add more fields as needed -->
 
