--- a/app/views/users/_description_modal.html.erb
+++ b/app/views/users/_description_modal.html.erb
@@ -1,18 +1,18 @@
 <%= turbo_frame_tag :remote_modal, target: :_top do %>
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-controller="bs-modal">
-    <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal fade" id="statisBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" data-controller="bs-modal">
+    <div class="modal-dialog modal-lg modal-dialog-centered ">
         <div class="modal-content">
         <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">Description</h1>
+            <h1 class="modal-title fs-5" id="staticBackdropLabel">Description</h1>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <%= form_with model: @user, url: "#" do |form| %>
+        <%= form_with model: current_user, url: update_user_description_path, method: :patch do |form| %>
         <div class="modal-body">
             <div class="row">
                 <div class="col=lg-12">
                     <div class="form-group">
                         <label class="mb-3">Edit Your Description</label>
-                        <%= form.text_area :description, value: @user.description, class: "form-control", rows: 15 %>
+                        <%= form.text_area :description, value: current_user.description, class: "form-control", rows: 15 %>
                     </div>
                 </div>
             </div>
