--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <!-- app/views/users/show.html.erb -->
-<div class="container">
+<div class="profile_container">
   <h1><%= @user.first_name %>'s Profile</h1>
   <!--<div>
     <strong>Profile Image:</strong>
@@ -362,27 +362,41 @@
       </div>
     </div>
 
-    <p class="d-inline-flex gap-1">
-      <div><a class="btn btn-secondary" data-bs-toggle="collapse" href="#password" role="button" aria-expanded="false" aria-controls="collapseExample">
-          Change Password
-        </a></div>
-    </p>
-    <div class="collapse" id="password">      
-      <%= render 'user_password', user: @user %>     
-    </div>
-    
-  </div>
-</div>
+ <div>
+   <strong>Marital_status: </strong> <%= @user.marital_status%>
+ </div>
 
-<!--<div class="form-group">
-          <label class="form-label">Current password</label>
-          <input type="password" class="form-control">
-        </div>
-        <div class="form-group">
-          <label class="form-label">New password</label>
-          <input type="password" class="form-control">
-        </div>
-        <div class="form-group">
-          <label class="form-label">Repeat new password</label>
-          <input type="password" class="form-control">
-        </div>-->
+ <div>
+   <strong>Height(in cm): </strong> <%= @user.height%>
+ </div>
+
+ <div>
+   <strong>Weight(in kg): </strong> <%= @user.weight%>
+ </div>
+
+ <div>
+   <strong>Highest_qualification : </strong> <%= @user.highest_qualification%>
+ </div>
+
+ <div>
+   <strong> Job_designation : </strong> <%= @user.job_designation%>
+ </div>
+
+
+ <div>
+   <strong>Job_packages : </strong> <%= @user.job_packages%>
+ </div>
+
+
+ <div>
+   <strong>Job_location : </strong> <%= @user.job_location%>
+ </div>
+
+ <div>
+   <strong>Mother_tongue : </strong> <%= @user.mother_tongue%>
+ </div>
+
+   <!-- Add more details as needed -->
+  
+   <%= link_to 'Edit Profile', edit_user_path(@user) %>
+</div>
