--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -28,6 +28,11 @@
         </div>
 
         <div class="form-group mb-2">
+          <%= f.label :dob %>
+          <%= f.date_field :dob, class: "form-control form-control-lg" %>
+        </div>
+
+        <div class="form-group mb-2">
           <%= f.label :username %>
           <%= f.text_field :username, class: "form-control form-control-lg" %>
         </div>
