adding activeadmin cancan authorization and ransack search

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -560,6 +560,7 @@ i {
     height: 80vh;
     overflow: hidden;
     z-index: 1;
+}
 .profile_container{
     display: flex;
     justify-content: center;
